# sih-25

./: .gitignore
contracts/: OilseedValueChain.sol  nyx.sol  prod-a.sol
offchain/: .env  Cargo.toml
offchain/src/: config.rs  error.rs  handlers.rs  ipfs.rs  lib.rs  main.rs  models.rs  routes.rs
