[package]
name = "offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
futures = "0.3"

reqwest = { version = "0.11", features = ["json"] }

async-trait = "0.1"

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

dotenvy = "0.15"

uuid = { version = "1.0", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# Database (for caching IPFS CIDs and metadata)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"], optional = true }

validator = { version = "0.18", features = ["derive"] }

[features]
default = []
database = ["sqlx"]

[dev-dependencies]
mockall = "0.12"
