[package]
name = "offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "native-tls"] }

# HTTP client for IPFS
# reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }

[dev-dependencies]
